[project]
name = "gps-oversample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.17.0",
    "jupyterlab>=4.2.5",
    "notebook>=7.2.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tomli>=2.0.1",
    "tqdm>=4.66.5",
]
